--- a/media/css/style.css
+++ b/media/css/style.css
@@ -133,7 +133,7 @@ ul.listing {
     list-style-type: none;
     padding: 0; }
     ul.listing li.listing-item a, ul.listing li.listing-item header #header h1 a, header #header h1 ul.listing li.listing-item a {
-      padding: .2em 0 .2em 2em; }
+      margin: .2em 0 .2em 2em; }
     ul.listing li.listing-item time {
       color: #999; }
     ul.listing li.listing-item:hover {
